--- a/billy-port/src/components/work.css
+++ b/billy-port/src/components/work.css
@@ -347,6 +347,21 @@ p.work-p {
   }
 }
 
+.li-text {
+  .li-text {
+  font-family: 'Face', sans-serif;
+  letter-spacing: 1px;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 2.2vh;
+  text-decoration: none;
+
+  @media screen and (max-width: 1200px) {
+    font-size: 1.75vh;
+  }
+}
+}
+
 .work-ul {
   padding-top: 2.5vh;
 }
